feat: melhorias fase 1 - seguranca, validacoes e perfil usuario
- Externalizar segredos via env vars (DB_PASSWORD, JWT_SECRET, CORS_ORIGINS)
- CORS restringido a origens configuradas (nao mais wildcard *)
- Plano padrao alterado de PRO para FREE para novos usuarios
- Enum StatusOS com validacao de transicoes de estado
- Verificacao de limites do plano na criacao de OS
- Endpoint de perfil do usuario (GET/PUT /api/usuario/perfil)
- Endpoint de alteracao de senha (PUT /api/usuario/senha)
- GlobalExceptionHandler com 403/405/JSON malformado + logging
- Fix: Dashboard botao Planos navegava para indice errado (6->15)
- Fix: Edicao de estoque agora passa editItemId ao StockFormPage
- @Transactional adicionado em operacoes de escrita